Changed button styles on contactform. Also fixed spacing between bars on offcanvas-toggle

--- a/src/components/contactform/index.scss
+++ b/src/components/contactform/index.scss
@@ -24,6 +24,9 @@ iframe.is-hidden {
     }
   }
   input[type='submit'] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     width:30%;
     display:block;
     margin:0 auto;
