--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -40,7 +40,7 @@
         &:before {
           content:'';
           position:relative;
-          bottom:7.5px;
+          bottom:9px;
           display:block;
           height:2px;
           width:30px;
@@ -50,7 +50,7 @@
         &:after {
           content:'';
           position:relative;
-          top:7.5px;
+          top:7px;
           display:block;
           height:2px;
           width:30px;
